# anvi

./: README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: debugging.md  resources.md  setup.md  todo.md
docs/development/: resources.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  main.rs  project.rs  state.rs  task.rs
src/components/icons/: AddIcon.tsx  DownArrowIcon.tsx  FolderIcon.tsx  SpinnerIcon.tsx
src/components/ui/: KanbanBoardView.tsx  LeftMenu.tsx  ProjectView.tsx  WorkspaceFolderPicker.tsx
src/state/: client.ts  config.ts  models.ts  project.ts  utils.ts
